<resources>
    <string name="app_name">CeluShop</string>
    <string name="welcome_celushop">Bienvenido A CeluShop</string>
    <string name="text_btn_welcome">Iniciar</string>
    <string name="text_btn_login">Iniciar Sesión</string>
    <string name="text_btn_register">Registrarse"</string>
    <string name="register">Registro</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="name">Nombre</string>
    <string name="edit_perfil">Editar Perfil</string>
    <string name="home">Home</string>
    <string name="carrito">Carrito</string>
    <string name="catalogo">Catalogo</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_confirm_password">Confirmar Contraseña</string>
    <string name="signIn">Iniciar Sesión</string>
    <string name="texto_buscar">Buscar</string>
    <string name="titulo_detalles_del_producto">Detalles del Producto</string>
    <string name="btn_comprar">Comprar</string>
    <string name="btn_añadir_carrito">Agregar al Carrito</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_save">Guardar Cambios</string>
    <string name="text_imagen">Tecno Pova 7</string>
    <string name="text_imagen_2">Redmi Note 15</string>
    <string name="text_precio">$920.000</string>
    <string name="text_marca">Marca</string>
    <string name="text_modelo">Modelo</string>
    <string name="text_almacenamiento">Almacenamiento</string>
    <string name="almacenamiento">256GB</string>
    <string name="text_ram">RAM</string>
    <string name="ram">8GB</string>
    <string name="text_color">Color</string>
    <string name="color">Negro</string>
    <string name="Texto_Prueba"><![CDATA[Lorem Ipsum es simplemente estandar Lorem Ipsum ha sido el texto...]]></string>
    <string name="text_edit_address">Edita tu dirección de entrega</string>
    <string name="prompt_address">Escribe tu Dirección</string>
    <string name="prompt_comments">(Casa, Apartamento, Oficina)</string>
    <string name="text_address">Dirreción</string>
    <string name="text_comments">Observaciones</string>
    <string name="address_test">Calle 40x #09</string>
    <string name="comments_test">Casa 22</string>
    <string name="btn_pay">Pagar</string>
    <string name="text_pse">PSE</string>
    <string name="description_modelo">Pova 7</string>
    <string name="description_marca">Tecno</string>
    <string name="price_test">$920.000</string>
    <string name="text_products_confirmation">Productos</string>
    <string name="text_delivery_confirmation">Envio</string>
    <string name="delivery_test">$30.000</string>
    <string name="total_test">$950.000</string>
    <string name="text_total">Total</string>
    <string name="text_name_confirmation">Nombre</string>
    <string name="name_test">Carlos Perez</string>
    <string name="title_data_confirmation">Datos de quien recibe</string>
    <string name="text_number_confirmation">Número de Celular</string>
    <string name="number_test">3141111111</string>
    <string name="title_delivery_confirmation">Entrega</string>
    <string name="btn_chance_delivery_confirmation">Modificar Dirección de Entrega</string>
    <string name="amount_test">1</string>
    <string name="btn_continue_shopping">Continuar Comprar</string>
    <string name="text_shopping_cart">Total</string>
    <string name="title_add_product">Añadir Información del Producto</string>
    <string name="text_name_product_add">Nombre del Producto</string>
    <string name="name_product_add">Escriba el nombre del producto</string>
    <string name="text_descripition_product_add">Descripción del Producto</string>
    <string name="descripition_product_add">Escriba la descripción del producto</string>
    <string name="text_price_product_add">Precio</string>
    <string name="price_product_add">Escriba el precio del producto</string>
    <string name="text_photo_product_add">Foto</string>
    <string name="text_features_products_add">Caracteristicas</string>
    <string name="text_stock_product_add">Cantidad de Stock</string>
    <string name="text_stock_product_add2">Stock</string>
    <string name="name_product">Nombre</string>
    <string name="description_product">Descripción</string>
    <string name="stock_test">5</string>
    <string name="btn_add_product">Añadir Producto</string>
    <string name="title_info_contact">Edita tu información de contacto</string>
    <string name="prompt_telefono">Teléfono</string>
    <string name="text_url_imagen">URL Imagen</string>
    <string name="text_administrar">Administrar</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="Sedes">Nuestras Sedes</string>
    <string name="iniciar_sesi_n_con_google">Iniciar Sesión con Google</string>
    <string name="administrar">Administrar</string>
    <string name="sedes_nav">Sedes</string>
    <string name="mensaje_entrega">Nos estaremos contactando contigo para la dirección de entrega</string>
    <string name="agradecimientos">¡Gracias Por Comprar con Nosotros!</string>
</resources>