<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.ConfirmacionCompraActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_pay"
            android:layout_width="333dp"
            android:layout_height="42dp"
            android:backgroundTint="@color/background_activities"
            android:text="@string/btn_pay" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">
                <TextView
                    android:id="@+id/titleProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_products_confirmation"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/price_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_test"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/textDelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_delivery_confirmation"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_test"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">
                <TextView
                    android:id="@+id/textTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_total"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_test"
                    android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/titleData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/title_data_confirmation"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_name_confirmation"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_test"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/titleDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/title_delivery_confirmation"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">


            <TextView
                android:id="@+id/textoMensaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mensaje_entrega"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/textoAgradecimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agradecimientos"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/background_activities"/>


        </LinearLayout>

        <TextView
            android:id="@+id/titlePaymentMethods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Metodos de Pago"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"/>

        <RadioButton
            android:id="@+id/radioButtonPSE"
            android:layout_width="62dp"
            android:layout_height="21dp"
            android:layout_gravity="start"
            android:text="@string/text_pse" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btn_cancelar"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/btn_cancel"

                android:textColor="@color/background_activities"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/background_activities"
                app:strokeWidth="2dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>