<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.AnadirProductoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_add_product"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_name_product_add"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/name_product_add"
            android:background="@android:drawable/edit_text"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_descripition_product_add"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/productDescription"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/descripition_product_add"
            android:background="@android:drawable/edit_text"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_price_product_add"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/productPrice"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/price_product_add"
            android:background="@android:drawable/edit_text"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginVertical="15dp">
            <TextView
                android:id="@+id/textPhotoProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_photo_product_add"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/productImage"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:inputType="text"
                android:hint="@string/text_url_imagen"
                android:background="@android:drawable/edit_text"
                />

        </LinearLayout>


        <TextView
            android:id="@+id/textFeatures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/text_features_products_add"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/textProductBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_marca"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/productBrand"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:inputType="text"
                android:hint="@string/text_marca"
                android:background="@android:drawable/edit_text"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textProductModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_modelo"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/productModel"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:inputType="text"
                android:hint="@string/text_modelo"
                android:background="@android:drawable/edit_text"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textProductStorage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_almacenamiento"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/productStorage"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:inputType="text"
                android:hint="@string/text_almacenamiento"
                android:background="@android:drawable/edit_text"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textProductRam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_ram"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/productRam"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:inputType="text"
                android:hint="@string/text_ram"
                android:background="@android:drawable/edit_text"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textProductColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_color"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/productColor"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:inputType="text"
                android:hint="@string/text_color"
                android:background="@android:drawable/edit_text"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textProductStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_stock_product_add"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/productStock"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:inputType="text"
                android:hint="@string/text_stock_product_add2"
                android:background="@android:drawable/edit_text"
                />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="160dp"
                android:layout_height="44dp"
                android:text="@string/btn_cancel"
                android:backgroundTint="@color/background_activities" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="160dp"
                android:layout_height="44dp"
                android:text="@string/btn_save"
                android:textColor="@color/background_activities"
                android:textSize="14sp"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/background_activities"
                app:strokeWidth="2dp"/>
        </LinearLayout>

    </LinearLayout>




</ScrollView>