<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.EdicionInformacionUsuarioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_info_contact"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginVertical="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="15dp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="8dp"
            />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/name"
            android:textSize="18sp"
            android:background="@android:drawable/edit_text"
            android:padding="12dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPersonName"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/et_correo"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/prompt_email"
            android:textSize="18sp"
            android:background="@android:drawable/edit_text"
            android:padding="12dp"
            android:layout_marginBottom="24dp"
            android:inputType="textEmailAddress" />

        <ImageView
            android:id="@+id/img_perfil"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_perfil_foto"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn_camara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomar_foto"
                android:backgroundTint="@color/background_activities"
                android:layout_marginEnd="16dp"/>

            <Button
                android:id="@+id/btn_galeria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_activities"
                android:text="@string/seleccionar_imagen"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="160dp"
                android:layout_height="44dp"
                android:text="@string/btn_cancel"
                android:backgroundTint="@color/background_activities" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="160dp"
                android:layout_height="44dp"
                android:text="@string/btn_save"
                android:textColor="@color/background_activities"
                android:textSize="14sp"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/background_activities"
                app:strokeWidth="2dp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>