<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="100dp"
        android:paddingBottom="60dp"
        android:paddingHorizontal="32dp"
        >

        <TextView
            android:id="@+id/iv_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inicio"
            android:textSize="48sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:fontFamily="sans-serif-black"
            android:textColor="@android:color/black"
            android:layout_marginBottom="50dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/et_correo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/prompt_email"
            android:textSize="18sp"
            android:background="@android:drawable/edit_text"
            android:padding="12dp"
            android:layout_marginBottom="24dp"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/et_contrasena"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/prompt_password"
            android:textSize="18sp"
            android:background="@android:drawable/edit_text"
            android:padding="12dp"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background_activities"
            android:text="@string/signIn"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:strokeColor="@color/white"
            app:strokeWidth="5dp" />

        <Button
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_google_logo"
            android:drawablePadding="12dp"
            android:padding="12dp"
            android:text="@string/iniciar_sesi_n_con_google"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/register_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_btn_register"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:gravity="center"/>

    </LinearLayout>

</ScrollView>